--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Connect 4</title>
+  
   <meta name="description" content="Play connect 4 turn by turn with a friend. Make a vertical, horizontal or diagonal line of 4 circles of your color to win the game!">
+  <meta name="keywords" content="Connect 4">
+  <meta name="author" content="Rémy Beumier">
+
+  <meta property="og:title" content="Connect 4">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="https://beumsk.github.io/Connect-4">
+  <meta property="og:image" content="https://beumsk.github.io/Connect-4/cover.jpg">
+  <meta property="og:image:secure_url" content="https://beumsk.github.io/Connect-4/cover.jpg">
+  <meta property="og:description" content="Play connect 4 turn by turn with a friend. Make a vertical, horizontal or diagonal line of 4 circles of your color to win the game!">
+
   <link rel="stylesheet" href="./style.css">
 
+  <title>Connect 4</title>
 </head>
 <body>
 <!-- partial:index.partial.html -->
